--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li><a href="https://devandaniel9-kalkulator-dari-teks-kalkulator-dari-teks-3-7b3xf2.streamlit.app/">Kalkulator Dari Teks</a> - Version 1.0</li>
             <li><a href="https://devandaniel9-equation-solver3.streamlit.app/">Equation Solver Old</a> - Sudah ada program yang lebih baru</li>
             <li><a href="https://devandaniel9-shape-program-devan-7zwso4.streamlit.app/">Bangun Datar dan Bangun Ruang</a> - Sudah ada Program Geometri</li>
-        </ul>
+        </ul><br>
         <!-- <p>Program baru: <b>Number Type Detection</b>, <b>Peluang</b> dan <b>Geometri</b></p> -->
         <p>Website baru: <b>Portofolio</b>, <b>Fakta dan Informasi</b>, dan <b>Blog dan Cerita</b></p>
         <p>Selain itu, ada juga link yang akan kita gunakan di masa depan nanti.</p>
@@ -63,18 +63,19 @@
             <li>Bangun 3 Dimensi (Python)</li>
             <li>Labirin / Maze (HTML & Python)</li>
             <li>Explore (HTML & Python)</li>
-        </ul>
+        </ul><br>
+        <p>Link luar terdiri dari beberapa link yang mungkin suka, dan terkait di halaman ini.</p>
         <p style="font-size:25px; color:#000080;"><b>Link luar:</b></p>
         <ul>
             <li><a href="https://www.python.org/">Website Python</a> - Bisa Download Python!</li>
             <li><a href="https://www.geeksforgeeks.org/">Belajar Python</a></li>
             <li><a href="https://www.w3schools.com/">Belajar HTML</a></li>
             <li><a href="https://www.wolframalpha.com/">Website Matematika</a> - Aplikasi WolframAlpha, bisa menyelesaikan soalnya!</li>
-        </ul>
+        </ul><br>
         <p style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
         <div class="box">
             <p>
-            Link halaman:<br>
+            <u>Link halaman:</u><br>
             <!-- <b>Home</b> -->
             <!-- <a class="button" href="blog.html">Blog</a> | -->
             <b>Home</b> |
@@ -83,12 +84,17 @@
             <a href="profil.html">Profil</a> |
             <a href="portofolio.html">Portofolio</a> |
             <a href="hasil-karya.html">Hasil Karya</a> |
-            <a href="about.html">About</a> |
+            <a href="about.html">About</a><br>
+            </p>
+            <p style="color:maroon;">
+            <u>Coming soon:</u><br>
             Timeline |
-            Updates (Coming Soon)
+            Updates |
+            Project |
+            Pertanyaan
             </p>
         </div>
-        <p>[Coming Soon]</p>
+        <p>----- Under Construction -----</p>
         <br>
         <a href="#home">Kembali ke awal</a>
         <br><br>
@@ -96,8 +102,8 @@
     </div>
     <footer style="background-color:#404040; padding:20px; color:white">
         <p style="line-height:2;">
-        Terakhir diupdate: 29 Agustus 2023<br>
-        Version: 1.6.3<br>
+        Terakhir diupdate: 30 Agustus 2023<br>
+        Version: 1.6.4<br>
         Copyright © 2023 by Devan
         </p>
     </footer>
