--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,21 @@
 </head>
 <body>
     <div class="top-container">
-        <font size="6" color="white"><b>SEBUAH WEBSITE</b></font>
+        <div class="dropdown" style="margin-right:20px; float:left;">
+            <!-- <button class="dropbtn">MENU</button> -->
+            <button class="dropbtn" style="background-color:transparent; font-size:0;"><img src="images/menu-icon.jpg" width="30"></button>
+            <div class="dropdown-content">
+                <a href="index.html">Home</a>
+                <a href="blog.html">Blog</a>
+                <a href="fakta.html">Fakta</a>
+                <a href="profil.html">Profil</a>
+                <a href="portofolio.html">Portofolio</a>
+            </div>
+        </div>
+        <img src="images/blank-profile.jpg" width="40" style="border-radius: 50%; vertical-align:middle; margin-right:20px; float:left;">
+        <!-- <font size="6" color="white"><b>SEBUAH WEBSITE</b></font> -->
+        <div style="font-size:30px; color:white;"><b>SEBUAH WEBSITE</b></div>
+        <div class="clearfix"></div>
     </div>
     <div class="container">
         <br>
@@ -25,7 +39,8 @@
             <b>Link cerita:</b><br>
             1. <a href="#1">Holiday to Bromo</a><br>
             2. <a href="#2">Descriptive Text</a><br>
-            3. <a href="#3">Memenangkan Lomba Besar</a>
+            3. <a href="#3">Memenangkan Lomba Besar</a><br>
+            4. <a href="#4">Holiday to Bali</a>
             </p>
         </div>
         <br>
@@ -70,6 +85,7 @@
             <!-- <ul><li> -->
             - Batu Malang: Kota di Jawa Timur<br>
             - Kata Coach di Eagle School, nanti akan berencana untuk retreat ke <b>Batu Malang</b>, untuk karya wisata.<br>
+            - Coach Dedie dan Nana sudah pergi ke Gunung Bromo di bulang Agustus, langit dan pemandangannya bagus.<br>
             <br>
             <b>Link:</b><br>
             * <a href="https://id.wikipedia.org/wiki/Jawa_Timur">Wikipedia - Jawa Timur</a><br>
@@ -126,11 +142,20 @@
             </p>
             <br>
         </div>
-        <p style="font-size: 25px"><b>4. Holiday to Bali</b></p>
-        <p style="font-size: 25px"><b>5. Holiday to Jakarta & Bandung</b></p>
-        <p style="font-size: 25px"><b>6. Cerita tentang Talent</b></p>
-        <p style="font-size: 25px"><b>7. Masa depan dan impian</b></p>
-        <p style="font-size: 25px"><b>8. [Under Construction]</b></p>
+        <p id="4" style="font-size: 25px"><b>4. Holiday to Bali</b></p>
+        <div class="container2">
+            <p>
+            Dengan tulisan bahasa Inggris
+            <br><br>
+            In June ????, my family and I went on vacation to <b>Bali</b>.<br>
+            [Under Construction]
+            </p>
+            <br>
+        </div>
+        <p id="5" style="font-size: 25px"><b>5. Holiday to Jakarta & Bandung</b></p>
+        <p id="6" style="font-size: 25px"><b>6. Cerita tentang Talent</b></p>
+        <p id="7" style="font-size: 25px"><b>7. Masa depan dan impian</b></p>
+        <p id="8" style="font-size: 25px"><b>8. [Under Construction]</b></p>
         <br>
         <p style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
         <div class="box">
@@ -148,7 +173,7 @@
         <!-- <p>Kembali ke: <a href="index.html">Menu Utama</a></p> -->
         <br>
         <a href="#home">Kembali ke awal</a>
-        <p>Terakhir diupdate: 29 Agustus 2023</p>
+        <p>Terakhir diupdate: 1 Sep 2023</p>
         <br>
     </div>
 </body>
