--- a/profil.html
+++ b/profil.html
@@ -19,15 +19,24 @@
             <img src="images/Gambar Profil.jpg" width="150" style="border: 2px solid black; border-radius: 50%;">
         </div>
         <p style="font-size:25px; color:#000080;"><b>Biodata</b></p>
-        <p>Nama: D****</p>
-        <p>Tanggal lahir: **/**/****</p>
+        <p>Nama: Devan Da**e* *</p>
+        <p>Tanggal lahir: 0*/0*/200*</p>
+        <p>Username: dev*nd****l9</p>
         <p style="font-size:25px; color:#000080;"><b>Kesukaan</b></p>
         <p>Buka aplikasi VS Code</p>
         <p>Mengerjakan program</p>
         <p>Suka pelajaran Matematika dan Bahasa Inggris</p>
         <p style="font-size:25px; color:#000080;"><b>Histori</b></p>
-        <p style="font-size:25px; color:#000080;"><b>Nama</b></p>
-        <p>Username: dev*nd****l9</p>
+        <p style="font-size:25px; color:#000080;"><b>Social Links</b></p>
+        <p>
+            YouTube: <img src="images/Youtube-Symbol-Vector.jpg" width="20" style="vertical-align:bottom; padding:2px;">
+            <a href="https://www.youtube.com/channel/UCbSs7ZjkJD3MWKt_vWyMU4Q">Devan - Youtube</a><br>
+            Instagram: <img src="images/instagram-icon.png" width="20" style="vertical-align:bottom; padding:2px;"> Devan - Instagram
+        </p>
+        <p style="font-size:25px; color:#000080;"><b>Lihat juga / See also</b></p>
+        <ul>
+            <li><a href="portofolio.html">Portofolio Devan</a></li>
+        </ul>
         <br>
         <p style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
         <div class="box">
@@ -46,7 +55,7 @@
         <p>[Coming Soon]</p>
         <br>
         <a href="#home">Kembali ke awal</a>
-        <p>Terakhir diupdate: 25 Agustus 2023</p>
+        <p>Terakhir diupdate: 1 Sep 2023</p>
         <br>
     </div>
 </body>
