--- a/index.html
+++ b/index.html
@@ -55,17 +55,23 @@
         <p>Selain itu, ada juga link yang akan kita gunakan di masa depan nanti.</p>
         <p style="font-size:25px; color:#000080;"><b>Link yang akan datang:</b></p>
         <ul>
-            <li style="color:darkgreen">Pengukur (Python) - Sedang dibuat</li>
+            <li style="color:darkgreen">
+                Pengukur (Python) - 
+                <div class="tooltip" >
+                Sedang dibuat
+                <span class="tooltiptext">Sedang dibuat website nya</span>
+                </div>
+            </li>
             <li style="color:darkgreen">Fakta dan Informasi (HTML) - Sedang dibuat</li>
-            <li>Timeline dan Sejarah (HTML)</li>
-            <li>Foto dan Kenangan (HTML)</li>
-            <li>Gambar (HTML)</li>
-            <li>Pelajaran (HTML & Python)</li>
+            <li>Timeline dan Sejarah (HTML) - <span style="color:maroon">v1.7</span></li>
+            <li>Foto dan Kenangan (HTML) - <span style="color:maroon">v1.7</span></li>
+            <li>Gambar (HTML) - <span style="color:maroon">v1.7.2</span></li>
+            <li>Pelajaran (HTML & Python) - <span style="color:maroon">v1.7.3</span></li>
             <li>Bangun 3 Dimensi (Python)</li>
-            <li>Labirin / Maze (HTML & Python)</li>
+            <li>Labirin / Maze (HTML & Python) - <span style="color:maroon">v1.8</span></li>
             <li>Explore (HTML & Python)</li>
             <li>BMI Calculator (HTML)</li>
-            <li>Input dalam Matematika (HTML)</li>
+            <li>Input dalam Matematika (HTML) - <span style="color:maroon">v1.9</span></li>
         </ul><br>
         <p>Link luar terdiri dari beberapa link yang mungkin suka, dan terkait di halaman ini.</p>
         <p style="font-size:25px; color:#000080;"><b>Link luar:</b></p>
@@ -110,13 +116,11 @@
             </tr>
             <tr>
                 <td>Hasil Karya</td>
-                <td>Berisi beberapa slide portofolio dan juga QR code.<br>
-                    Bisa dibaca dan nge-scan QR code nya.</td>
+                <td>Berisi hasil karya yang sudah pernah buat dari sekolah</td>
             </tr>
             <tr>
                 <td>About</td>
-                <td>Berisi beberapa slide portofolio dan juga QR code.<br>
-                    Bisa dibaca dan nge-scan QR code nya.</td>
+                <td><s>Isinya kurang jelas</s></td>
             </tr>
         </table>
         <br>
@@ -128,23 +132,23 @@
                 <th style="width:400px;">Informasi Halaman</th>
             </tr>
             <tr>
-                <td>Timeline</td>
+                <td>Timeline - <span style="color:maroon">v1.7</span></td>
                 <td>Berisi timeline dan juga sejarah, terdapat pengembangan website, program, dan karakter dari awal sampai akhir.</td>
             </tr>
             <tr>
-                <td>Updates</td>
+                <td>Updates - <span style="color:maroon">v1.7</span></td>
                 <td>Berisi update-update yang terbaru hingga terlama di website ini.</td>
             </tr>
             <tr>
-                <td>Projects</td>
+                <td>Projects - <span style="color:maroon">v1.7.1</span></td>
                 <td>Berisi projek-projek baik Python maupun HTML yang sudah pernah kita buat di website ini.</td>
             </tr>
             <tr>
-                <td>Pertanyaan</td>
+                <td>Pertanyaan - <span style="color:maroon">v1.7.2</span></td>
                 <td>Berisi pertanyaan dan Q&A yang menarik dan berhubungan dengan website ini.</td>
             </tr>
             <tr>
-                <td>Guide</td>
+                <td>Guide - <span style="color:maroon">v1.8</span></td>
                 <td>Berisi pengetahuan dan caranya untuk memahami website ini dan juga yang lainnya.</td>
             </tr>
         </table>
@@ -179,8 +183,8 @@
     </div>
     <footer style="background-color:#404040; padding:20px; color:white">
         <p style="line-height:2;">
-        Terakhir diupdate: 1 Sep 2023<br>
-        Version: 1.6.5<br>
+        Terakhir diupdate: 4 Sep 2023<br>
+        Version: 1.6.6<br>
         Copyright © 2023 by Devan
         </p>
     </footer>
