--- a/portofolio.html
+++ b/portofolio.html
@@ -8,7 +8,18 @@
 </head>
 <body>
     <div class="top-container">
-        <font size="6" color="white"><b>SEBUAH WEBSITE</b></font>
+        <div class="dropdown" style="margin-right:20px; float:left;">
+            <button class="dropbtn" style="background-color:transparent; font-size:0;"><img src="images/menu-icon.jpg" width="30"></button>
+            <div class="dropdown-content">
+                <a href="blog.html">Blog</a>
+                <a href="fakta.html">Fakta</a>
+                <a href="profil.html">Profil</a>
+                <a href="portofolio.html">Portofolio</a>
+            </div>
+        </div>
+        <img src="images/blank-profile.jpg" width="40" style="border-radius: 50%; vertical-align:middle; margin-right:20px; float:left;">
+        <div style="font-size:30px; color:white;"><b>SEBUAH WEBSITE</b></div>
+        <div class="clearfix"></div>
     </div>
     <div class="container">
         <br>
@@ -27,7 +38,7 @@
             <img src="portofolio/3.png" width="500">
             <img src="portofolio/4.png" width="500"><br>
             <img src="portofolio/5.png" width="500">
-            <img src="portofolio/6.png" width="500">
+            <!-- <img src="portofolio/6.png" width="500"> -->
         </div>
         <p style="font-size:25px; color:#000080;"><b>QR Code</b></p>
         <p>Scan QR Code disini ya!</p>
