--- a/portofolio.html
+++ b/portofolio.html
@@ -38,7 +38,7 @@
             <img src="portofolio/3.png" width="500">
             <img src="portofolio/4.png" width="500"><br>
             <img src="portofolio/5.png" width="500">
-            <!-- <img src="portofolio/6.png" width="500"> -->
+            <img src="portofolio/6.png" width="500">
         </div>
         <p style="font-size:25px; color:#000080;"><b>QR Code</b></p>
         <p>Scan QR Code disini ya!</p>
