--- a/portofolio.html
+++ b/portofolio.html
@@ -60,7 +60,7 @@
         <br>
         <a href="#home">Kembali ke awal</a>
         <!-- <footer style=""> -->
-        <p>Terakhir diupdate: 25 Agustus 2023</p>
+        <p>Terakhir diupdate: 5 Sep 2023</p>
         <br>
     </div>
 </body>
