--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,8 @@
             1. <a href="#1">Holiday to Bromo</a><br>
             2. <a href="#2">Descriptive Text</a><br>
             3. <a href="#3">Memenangkan Lomba Besar</a><br>
-            4. <a href="#4">Holiday to Bali</a>
+            4. <a href="#4">Retreat Eagle School 2023</a><br>
+            5. <a href="#5">Holiday to Bali</a>
             </p>
         </div>
         <br>
@@ -142,7 +143,33 @@
             </p>
             <br>
         </div>
-        <p id="4" style="font-size: 25px"><b>4. Holiday to Bali</b></p>
+        <p id="4" style="font-size: 25px"><b>4. Retreat Eagle School 2023</b></p>
+        <div class="container2">
+            <p>
+            <!-- <span style="font-size:22px; color:#000080;"><b>Kamis, 8 Sep 2023</b></span> -->
+            <b style="font-size:22px; color:#000080;">Kamis, 8 Sep 2023</b>
+            <br><br>
+            <!-- <b style="color:#200040">Berangkat ke Lembah Kemenangan</b><br> -->
+            <b>Berangkat ke Lembah Kemenangan</b><br>
+            Lokasi: Lembah Kemenangan, Ungaran, Kab. Semarang<br><br>
+            Hari ini siswa SMA dan gurunya pergi dari sekolah naik bus, dengan membawa 2 tas yang berat, seperti tas buku dan Sekolah, lalu masukkan ke dalam bawah bus. Nanti akan ke Lembah Kemenang an melewati, Jalan Tol di Ungaran, makan siang. Ada 3 sesi hari ini.
+            <br><br>
+            <b>SESI 1</b><br>
+            Pada sesi pertama pengenalan retreat yuaitu kelompok yel-yel dan kamar, dikumpulkan hp, dan juga ibadah bersama pendeta Michael. Setelah itu, nyari kamar tapi malah ke atas jadi bingung, akhirnya ada temannya yang bantuin ke kamar, dio dalamnya ada Gilbert, dan mandi dengan membawa peralatan mandi dan bawa baju ganti, juga belum terlalu terbiasa jadi agak bingung.
+            <br><br>
+            <b>SESI 2</b><br>
+            Pada sesi kedua, kembali ke aula dikumpulkan hp lagi ke kotaknya, ada ibadah bersama pendeta Hengky, khotbah-nya marah-marah dan berdoanya kaut untuk menjauh dari dosa, setelah itu makan malam ada ayamnya, suasananya rame, dan melihat coach Ditus yang sedang berbicara sama Ps. Hengky.
+            <br><br>
+            <b>SESI 3</b><br>
+            Pada sesi ketiga, ada ibadah bersama Sr. Ditus, tentang kekudusan, juga ada sesi tanya jawab (Q&A). Dan kegia5tan terakhir hari ini adalah latihan yel-yel dengan tema Be Excellent jam 10 malam, karena banyak siswa yang melanggar tata tertib, maka C. Gaby dan C. Agus S marah dan menegurnya, seperti membersihkan meja makan. Di malam hari akhirnya melihat penampilan kelompok yel-yel dekat api unggun karena abis latihan. Baru tidur di kamar Graha Gita sekiar tengah malam atau jam 12 malam, sempat main hp dan menunjukkan ke Gilbert.
+            <br><br>
+            <span style="font-size:22px; color:#000080;"><b>Jumat, 9 Sep 2023</b></span>
+            <br><br>
+            <b>SESI 4</b><br>
+            </p>
+            <br>
+        </div>
+        <p id="5" style="font-size: 25px"><b>5. Holiday to Bali</b></p>
         <div class="container2">
             <p>
             Dengan tulisan bahasa Inggris
@@ -152,10 +179,10 @@
             </p>
             <br>
         </div>
-        <p id="5" style="font-size: 25px"><b>5. Holiday to Jakarta & Bandung</b></p>
-        <p id="6" style="font-size: 25px"><b>6. Cerita tentang Talent</b></p>
-        <p id="7" style="font-size: 25px"><b>7. Masa depan dan impian</b></p>
-        <p id="8" style="font-size: 25px"><b>8. [Under Construction]</b></p>
+        <p id="6" style="font-size: 25px"><b>6. Holiday to Jakarta & Bandung</b></p>
+        <p id="7" style="font-size: 25px"><b>7. Cerita tentang Talent</b></p>
+        <p id="8" style="font-size: 25px"><b>8. Masa depan dan impian</b></p>
+        <p id="9" style="font-size: 25px"><b>9. [Under Construction]</b></p>
         <br>
         <p style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
         <div class="box">
@@ -173,7 +200,7 @@
         <!-- <p>Kembali ke: <a href="index.html">Menu Utama</a></p> -->
         <br>
         <a href="#home">Kembali ke awal</a>
-        <p>Terakhir diupdate: 1 Sep 2023</p>
+        <p>Terakhir diupdate: 11 Sep 2023</p>
         <br>
     </div>
 </body>
