--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Website Saya</title>
+    <title>Website Devan</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
 </head>
 <!-- <style></style> -->
 <body>
+    <script src="script.js"></script>
     <div class="top-container">
         <div class="dropdown" style="margin-right:20px; float:left;">
             <!-- <button class="dropbtn">MENU</button> -->
@@ -63,8 +64,8 @@
                 </div>
             </li>
             <li style="color:darkgreen">Fakta dan Informasi (HTML) - Sedang dibuat</li>
-            <li>Timeline dan Sejarah (HTML) - <span style="color:maroon">v1.7</span></li>
-            <li>Foto dan Kenangan (HTML) - <span style="color:maroon">v1.7</span></li>
+            <li style="color:darkgreen">Timeline dan Sejarah (HTML) - Sedang dibuat</li>
+            <li style="color:darkgreen">Foto dan Kenangan (HTML) - Sedang dibuat</li>
             <li>Gambar (HTML) - <span style="color:maroon">v1.7.2</span></li>
             <li>Pelajaran (HTML & Python) - <span style="color:maroon">v1.7.3</span></li>
             <li>Bangun 3 Dimensi (Python)</li>
@@ -118,10 +119,6 @@
                 <td>Hasil Karya</td>
                 <td>Berisi hasil karya yang sudah pernah buat dari sekolah</td>
             </tr>
-            <tr>
-                <td>About</td>
-                <td><s>Isinya kurang jelas</s></td>
-            </tr>
         </table>
         <br>
 
@@ -168,11 +165,16 @@
             <a href="profil.html">Profil</a> |
             <a href="portofolio.html">Portofolio</a> |
             <a href="hasil-karya.html">Hasil Karya</a> |
-            <a href="about.html">About</a><br>
+            <a href="timeline.html">Timeline</a> |
+            <a href="updates.html">Updates</a><br>
+            </p>
+            <p style="color:navy;">
+            <u>Coming soon:</u><br>
+            Projects | Pertanyaan | Guide | Website lainnya
             </p>
             <p style="color:maroon;">
-            <u>Coming soon:</u><br>
-            Timeline | Updates | Projects | Pertanyaan | Guide
+            <u>Yang mau di delete:</u><br>
+            <a href="about.html">About</a>
             </p>
         </div>
         <br>
@@ -183,8 +185,8 @@
     </div>
     <footer style="background-color:#404040; padding:20px; color:white">
         <p style="line-height:2;">
-        Terakhir diupdate: 4 Sep 2023<br>
-        Version: 1.6.6<br>
+        Terakhir diupdate: 15 Sep 2023<br>
+        Version: 1.7<br>
         Copyright © 2023 by Devan
         </p>
     </footer>
