--- a/profil.html
+++ b/profil.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Website Saya</title>
+    <title>Website Devan</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
@@ -19,13 +19,19 @@
             <img src="images/Gambar Profil.jpg" width="150" style="border: 2px solid black; border-radius: 50%;">
         </div>
         <p style="font-size:25px; color:#000080;"><b>Biodata</b></p>
-        <p>Nama: Devan Da**e* *</p>
-        <p>Tanggal lahir: 0*/0*/200*</p>
-        <p>Username: dev*nd****l9</p>
+        <p style="line-height:1.5">
+        Nama: Devan Dan*e* *<br>
+        Tanggal lahir: 0*/0*/2008<br>
+        Username: dev*ndan**l9<br>
+        Address: ?????
+        </p>
         <p style="font-size:25px; color:#000080;"><b>Kesukaan</b></p>
-        <p>Buka aplikasi VS Code</p>
-        <p>Mengerjakan program</p>
-        <p>Suka pelajaran Matematika dan Bahasa Inggris</p>
+        <p style="line-height:1.5">
+        Buka aplikasi VS Code<br>
+        Mengerjakan program<br>
+        Suka pelajaran Matematika dan Bahasa Inggris<br>
+        Bahasa pemrograman: HTML, CSS, JavaScript
+        </p>
         <p style="font-size:25px; color:#000080;"><b>Histori</b></p>
         <p style="font-size:25px; color:#000080;"><b>Social Links</b></p>
         <p>
@@ -55,7 +61,7 @@
         <p>[Coming Soon]</p>
         <br>
         <a href="#home">Kembali ke awal</a>
-        <p>Terakhir diupdate: 1 Sep 2023</p>
+        <p>Terakhir diupdate: 15 Sep 2023</p>
         <br>
     </div>
 </body>
