--- a/index.html
+++ b/index.html
@@ -175,17 +175,18 @@
             <p style="color:maroon;">
             <u>Yang mau di delete:</u><br>
             <a href="about.html">About</a>
+            <!-- <iframe src="text.txt"></iframe> -->
             </p>
         </div>
         <br>
-        <br>
-        <a href="#home">Kembali ke awal</a>
+        <!-- <a href="#home">Kembali ke awal</a> -->
+        <a class="button" href="#home">Kembali ke awal</a>
         <br><br>
         <!-- <footer style=""> -->
     </div>
-    <footer style="background-color:#404040; padding:20px; color:white">
-        <p style="line-height:2;">
-        Terakhir diupdate: 15 Sep 2023<br>
+    <footer style="background-color:#404040; padding:10px; color:white">
+        <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
+        Terakhir diupdate: 17 Sep 2023<br>
         Version: 1.7<br>
         Copyright © 2023 by Devan
         </p>
