--- a/profil.html
+++ b/profil.html
@@ -7,45 +7,39 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="top-container">
+    <div class="top-container title">
         <font size="6" color="white"><b>SEBUAH WEBSITE</b></font>
     </div>
     <div class="container">
         <br>
-        <font id="home" size="7" color="#1a7860"><b>PROFIL</b></font>
+        <font class="title" id="home" size="7" color="#1a7860"><b>PROFIL</b></font>
         <p style="font-size:25px; color:#000080;"><b>Gambar</b></p>
         <div class="image">
             <img src="images/IMG_20200105_121417.jpg" width="150" style="border: 2px solid black; border-radius: 50%;">
             <img src="images/Gambar Profil.jpg" width="150" style="border: 2px solid black; border-radius: 50%;">
         </div>
-        <p style="font-size:25px; color:#000080;"><b>Biodata</b></p>
-        <p style="line-height:1.5">
-        Nama: Devan Dan*e* *<br>
-        Tanggal lahir: 0*/0*/2008<br>
-        Username: dev*ndan**l9<br>
-        Address: ?????
-        </p>
-        <p style="font-size:25px; color:#000080;"><b>Kesukaan</b></p>
-        <p style="line-height:1.5">
-        Buka aplikasi VS Code<br>
-        Mengerjakan program<br>
-        Suka pelajaran Matematika dan Bahasa Inggris<br>
-        Bahasa pemrograman: HTML, CSS, JavaScript
-        </p>
-        <p style="font-size:25px; color:#000080;"><b>Histori</b></p>
-        <p style="font-size:25px; color:#000080;"><b>Social Links</b></p>
+        <p class="title" style="font-size:25px; color:#000080;"><b>Biodata</b></p>
+        <p>Nama: Devan Da**e* *</p>
+        <p>Tanggal lahir: 0*/0*/200*</p>
+        <p>Username: dev*ndan**l9</p>
+        <p class="title" style="font-size:25px; color:#000080;"><b>Kesukaan</b></p>
+        <p>Buka aplikasi VS Code</p>
+        <p>Mengerjakan program</p>
+        <p>Suka pelajaran Matematika dan Bahasa Inggris</p>
+        <p class="title" style="font-size:25px; color:#000080;"><b>Histori</b></p>
+        <p class="title" style="font-size:25px; color:#000080;"><b>Social Links</b></p>
         <p>
             YouTube: <img src="images/Youtube-Symbol-Vector.jpg" width="20" style="vertical-align:bottom; padding:2px;">
             <a href="https://www.youtube.com/channel/UCbSs7ZjkJD3MWKt_vWyMU4Q">Devan - Youtube</a><br>
             Instagram: <img src="images/instagram-icon.png" width="20" style="vertical-align:bottom; padding:2px;"> Devan - Instagram
         </p>
-        <p style="font-size:25px; color:#000080;"><b>Lihat juga / See also</b></p>
+        <p class="title" style="font-size:25px; color:#000080;"><b>Lihat juga / See also</b></p>
         <ul>
             <li><a href="portofolio.html">Portofolio Devan</a></li>
         </ul>
         <br>
-        <p style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
-        <div class="box">
+        <p class="title" style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
+        <div class="box title">
             <p>
             Link halaman:<br>
             <a href="index.html">Home</a> |
@@ -53,16 +47,20 @@
             <a href="fakta.html">Fakta</a> |
             <b>Profil</b> |
             <a href="portofolio.html">Portofolio</a> |
-            <a href="about.html">About</a> |
-            Timeline (Coming Soon)
+            <a href="hasil-karya.html">Hasil Karya</a> |
+            <a href="timeline.html">Timeline</a> |
+            <a href="updates.html">Updates</a>
             </p>
         </div>
-        <!-- <p>Kembali ke: <a href="index.html">Menu Utama</a></p> -->
-        <p>[Coming Soon]</p>
         <br>
-        <a href="#home">Kembali ke awal</a>
-        <p>Terakhir diupdate: 15 Sep 2023</p>
-        <br>
+        <a class="button title" href="#home">Kembali ke awal</a>
+        <br><br>
     </div>
+    <footer style="background-color:#404040; padding:10px; color:white;">
+        <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
+        Terakhir diupdate: 25 Sep 2023<br>
+        Copyright © 2023 by Devan
+        </p>
+    </footer>
 </body>
 </html>
